PROTON-1842: timer rearm outside lock can try to access freed memory if another thread ends the pconnection ahead of the rearm